--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "14.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "styled-components": "^6.1.8",
     "typescript": "5.3.3"
   }
 }
