config: 테스트 환경 구성/절대 경로 추가
- jest, testing-library 추가
- 절대 경로 설정

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,12 @@
     "jsx": "preserve",
     "incremental": true,
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@pages": ["./src/pages/*"],
+      "@components": ["./src/components/*"],
+      "@hooks": ["./src/hooks/*"],
+      "@constants": ["./src/constants/*"],
+      "@utils": ["./src/utils/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
